# ennchan-search01

./: README.md  pyproject.toml  requirements.txt
ennchan_search/: __init__.py  config.py
ennchan_search/core/: __init__.py  interfaces.py  model.py  search.py
ennchan_search/extractor/: __init__.py  extractorModel.py
ennchan_search/utils/: __init__.py  error_handling.py
tests/: __init__.py  conftest.py  test_config.py  test_extractor.py  test_integration.py  test_interfaces.py  test_model.py
versions/: ennchan_search-0.0.1-py3-none-any.whl  ennchan_search-0.1.0-py3-none-any.whl
